--- a/app/modules/editor/partials/editor.node.jade
+++ b/app/modules/editor/partials/editor.node.jade
@@ -55,9 +55,8 @@
 
   #editor-nodes-root
 
-    //ul.nodes-tree(frang-tree)
-    //  li(frang-tree-repeat="n in rootNodes", ng-include="'/partials/node-template.html'")
+    ul.tree.nodes-tree(frang-tree, ngModel="rootNodes")
 
-    .nodes-tree(ui-tree="treeOptions", data-drag-delay="250", data-empty-place-holder-enabled="true", ng-cloak)
-      ol(ui-tree-nodes="", ng-model="rootNodes")
-        li(ng-repeat="n in rootNodes", ui-tree-node, data-collapsed, ng-include="'/partials/node-template.html'")
+      li.tree(frang-tree-repeat="n in rootNodes", frang-tree-drag="{node: n, parent: $parent.node}", frang-tree-drop="drop(n, dragData.node, dragData.parent)", frang-tree-allow-drop="dragOver(n, dragData.node, dragData.parent)")
+
+        span(ng-include="'/partials/node-template.html'")
