--- a/app/modules/editor/partials/includes/node-icon-template.jade
+++ b/app/modules/editor/partials/includes/node-icon-template.jade
@@ -1,3 +1,3 @@
-td.node-icon-col(id="node-icon-col_{{n.id()}}", style="width: 24px; min-width: 24px;")
+td.node-icon-col(id="node-icon-col_{{n.id()}}")
 
   span.text-muted.node-icon.cic(id="node-icon_{{n.id()}}", class="cic-{{n.getIcon()}}")
