--- a/app/modules/editor/partials/includes/node-template.jade
+++ b/app/modules/editor/partials/includes/node-template.jade
@@ -2,27 +2,21 @@ table.node-line(ng-mouseover="setOver(n); $event.stopPropagation();", ng-mousele
 
   td(style="min-width: 32px;")
 
-    a.btn.btn-xs(type="button", ng-click="toggle()", ng-show="n.hasChildren()", ng-mouseover="setExpandOver(n); $event.stopPropagation();", ng-mouseleave="setExpandOver(null)", style="margin: 0px !important; padding-top: 0px !important; padding-bottom: 0px !important;")
-      //ng-click="toggleExpandCollapse(n, $event.altKey); $event.stopPropagation();"
-      span.node-expand.cic(ng-class="{ 'cic-arrow-right8': collapsed, 'cic-arrow-down8': !collapsed, 'node-expand-highlighted': isExpandOver(n)}", style="font-size: 21px;")
+    a.btn.btn-xs(type="button", ng-click="toggleExpandCollapse(n, $event.altKey); $event.stopPropagation();", ng-if="n.hasChildren()", ng-mouseover="setExpandOver(n); $event.stopPropagation();", ng-mouseleave="setExpandOver(null)", style="margin: 0px !important; padding-top: 0px !important; padding-bottom: 0px !important;")
+      span.node-expand.cic(ng-class="{ 'cic-arrow-right8': n.isCollapsed(), 'cic-arrow-down8': n.isExpanded(), 'node-expand-highlighted': isExpandOver(n)}")
 
   td
 
-    div(ui-tree-handle)
+    table.node(id="node-element_{{n.id()}}", ng-click="setSelection(n); $event.stopPropagation();", ng-dblclick="toggleExpandCollapse(n); $event.stopPropagation();", ng-class="{ 'node-highlighted': isOver(n) && !isSelection(n), 'node-selected': isSelection(n) && !isOver(n), 'node-selected-highlighted': isSelection(n) && isOver(n) }", ng-model="n", render-node="n")
 
-      table.node(id="node-element_{{n.id()}}", ng-click="setSelection(n); $event.stopPropagation();", ng-dblclick="toggleExpandCollapse(n); $event.stopPropagation();", ng-class="{ 'node-highlighted': isOver(n) && !isSelection(n), 'node-selected': isSelection(n) && !isOver(n), 'node-selected-highlighted': isSelection(n) && isOver(n) }", ng-model="n", render-node="n")
+      include node-color-template
 
-        include node-color-template
+      include node-label-template
 
-        include node-label-template
-
-        include node-modified-template
+      include node-modified-template
 
   include node-menu-template
 
 
-//ul(ng-if="!n.collapsed && n.hasChildren()", frang-tree-insert-children="n.children()")
-
-ol(ui-tree-nodes="", ng-model="n.nodes", ng-class="{hidden: collapsed}")
-  li(ng-repeat="n in n.nodes", ui-tree-node, data-collapsed, ng-include="'/partials/node-template.html'")
+ul(ng-if="!n.isCollapsed() && n.nodes", frang-tree-insert-children="n.nodes")
 
