--- a/app/modules/editor/partials/includes/node-color-template.jade
+++ b/app/modules/editor/partials/includes/node-color-template.jade
@@ -1,1 +1,2 @@
-td.node-color(id="node-color_{{n.id()}}", class="{{n.getColor()}}-back", style="width: 8px; min-width: 8px;")
+td.node-color-col(id="node-color_{{n.id()}}", class="{{n.getColor()}}-back")
+  include node-state-template
