--- a/app/modules/editor/styles/editor.component.less
+++ b/app/modules/editor/styles/editor.component.less
@@ -1,25 +1,31 @@
-@component-color: whitesmoke;
+@component-color: @control-color;
 @component-width: 200px;
-@component-height: 24px;
+@component-height: 28px;
+
+.components ol {
+  list-style-type: none;
+  padding: 0px;
+}
 
 .component {
 //  width: @component-width;
   background: @component-color;
   font-size: 12px;
 //  max-width: @component-width;
+  min-height: @component-height;
   cursor: pointer;
 }
 
 .component-highlighted {
-  background: lightsteelblue;
+  background: @control-highlight-color;
 }
 
 .component-selected {
-  background: lightsteelblue;
+  background: @control-selection-color;
 }
 
 .component-selected-highlighted {
-  background: #ccd9ea;
+  background: @control-selection-color;
 }
 
 .component-color {
@@ -38,7 +44,7 @@
 .component-icon {
   font-size: medium;
   vertical-align: middle;
-  color: @gray-light;
+  color: @dark-icon-color;
 }
 
 .component-label-col {
@@ -63,15 +69,15 @@
 }
 
 .component-xs-highlighted {
-  background: lightsteelblue;
+  background: @control-highlight-color;
 }
 
 .component-xs-selected {
-  background: lightsteelblue;
+  background: @control-selection-color;
 }
 
 .component-xs-selected-highlighted {
-  background: #ccd9ea;
+  background: @control-selection-color;
 }
 
 .component-xs-icon-col {
@@ -83,7 +89,7 @@
 .component-xs-icon {
   font-size: small;
   vertical-align: middle;
-  color: @gray-light;
+  color: @dark-icon-color;
 }
 
 .bold {
@@ -122,6 +128,10 @@
   }
 }
 
+#editor-components-root {
+  background-color: @component-color;
+}
+
 #editor-components {
 }
 
@@ -140,110 +150,4 @@
   overflow-x: hidden;
   overflow-y: auto;
   min-width: 36px;
-}
-
-.components .angular-ui-tree {
-
-}
-
-.components .angular-ui-tree-empty {
-  border: none !important;
-//  min-height: 100px;
-  background-color: transparent !important;
-  background-image: none !important;
-}
-
-.components .angular-ui-tree-nodes {
-  display: block;
-  position: relative;
-  margin: 0px;
-  padding: 0px;
-  list-style: none;
-}
-
-.components .angular-ui-tree-nodes .angular-ui-tree-nodes {
-  padding-left: 0px;
-}
-
-.components .angular-ui-tree-node, .components .angular-ui-tree-placeholder {
-  display: block;
-  position: relative;
-  background-color: transparent !important;
-  margin: 0 !important;
-  padding: 0px !important;
-//  min-width: @component-width !important;
-//  width: @component-width !important;
-  min-height: @component-height !important;
-  line-height: @component-height !important;
-}
-
-.components .angular-ui-tree-hidden {
-  display: none;
-}
-
-.components .angular-ui-tree-placeholder {
-  margin: 0px !important;
-  padding: 0px !important;
-}
-
-.components .angular-ui-tree-handle {
-  cursor: pointer;
-  text-decoration: none !important;
-  font-weight: normal !important;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-.components-xs .angular-ui-tree {
-
-}
-
-.components-xs .angular-ui-tree-empty {
-  border: none !important;
-//  min-height: 100px;
-  background-color: transparent !important;
-  background-image: none !important;
-}
-
-.components-xs .angular-ui-tree-nodes {
-  display: block;
-  position: relative;
-  margin: 0px;
-  padding: 0px;
-  list-style: none;
-}
-
-.components-xs .angular-ui-tree-nodes .angular-ui-tree-nodes {
-  padding-left: 0px;
-}
-
-.components-xs .angular-ui-tree-node, .components-xs .angular-ui-tree-placeholder {
-  display: block;
-  position: relative;
-  background-color: transparent !important;
-  margin: 0 !important;
-  padding: 0px !important;
-//  min-width: @component-width !important;
-//  width: @component-width !important;
-  min-height: @component-height !important;
-  line-height: @component-height !important;
-}
-
-.components-xs .angular-ui-tree-hidden {
-  display: none;
-}
-
-.components-xs .angular-ui-tree-placeholder {
-  margin: 0px !important;
-  padding: 0px !important;
-}
-
-.components-xs .angular-ui-tree-handle {
-  cursor: pointer;
-  text-decoration: none !important;
-  font-weight: normal !important;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
 }
