--- a/app/dynFormTemplates/label.jade
+++ b/app/dynFormTemplates/label.jade
@@ -2,4 +2,4 @@ div(class="{{fields[fieldIndex].getLabelClass()}}", ng-if="fields[fieldIndex].la
 
   div(ng-show="fields[fieldIndex].type != 'group'")
 
-    label.control-label(dyn-id="{{fields[fieldIndex].domId('label', $index)}}", name="{{fields[fieldIndex].domName('label', $index)}}") {{fields[fieldIndex].label}}
+    label.control-label.dynform-label(dyn-id="{{fields[fieldIndex].domId('label', $index)}}", name="{{fields[fieldIndex].domName('label', $index)}}") {{fields[fieldIndex].label}}
