--- a/app/modules/editor/partials/includes/component-label-template.jade
+++ b/app/modules/editor/partials/includes/component-label-template.jade
@@ -1,3 +1,3 @@
 td.component-label-col(id="component-label-col_{{c._id}}")
 
-  span.component-label(id="component-label_{{c._id}}") {{c.displayName()}}
+  span.component-label(id="component-label_{{c._id}}", ng-class="{ 'italic': c.isLink() }") {{c.displayName()}}
