--- a/app/styles/_variables.less
+++ b/app/styles/_variables.less
@@ -2,6 +2,88 @@
 
 @modal-inner-padding: 10px;
 
+
+@white-color: #f5f5f5;
+
+@light-gray-color: #d4d4d4;
+@gray-color: #999999;
+@dark-gray-color: #555555;
+@darker-gray-color: #333333;
+
+@light-blue-color: #dde5f1;
+@blue-color: #b0c4de;
+@dark-blue-color: #688ec0;
+@darker-blue-color: #4a5b71;
+
+@light-yellow-color: #fffee6;
+@yellow-color: #fffba6;
+@dark-yellow-color: #cbc884;
+@darker-yellow-color: #9e9c67;
+
+@light-orange-color: #fff0c2;
+@orange-color: #ffdd73;
+@dark-orange-color: #d8bb62;
+@darker-orange-color: #85733c;
+
+@light-red-color: #f3a7a7;
+@red-color: #e68079;
+@dark-red-color: #a53b32;
+@darker-red-color: #6a2621;
+
+@light-pink-color: #f7dfe6;
+@pink-color: #e8a6ba;
+@dark-pink-color: #ad7b8b;
+@darker-pink-color: #774b59;
+
+@light-purple-color: #e0d3ef;
+@purple-color: #ae8bd4;
+@dark-purple-color: #866ba3;
+@darker-purple-color: #604a78;
+
+@light-brown-color: #e4d2b4;
+@brown-color: #c09853;
+@dark-brown-color: #91733f;
+@darker-brown-color: #5c4928;
+
+@light-green-color: #cae9ca;
+@green-color: #86cb86;
+@dark-green-color: #529e52;
+@darker-green-color: #386b38;
+
+
+@form-color: @white-color;
+@sub-form-color: @light-gray-color;
+
+@control-color: @white-color;
+@alt-control-color: @dark-gray-color;
+
+@highlight-color: @light-blue-color;
+@text-highlight-color: @white-color;
+@control-highlight-color: @highlight-color;
+@alt-control-highlight-color: @gray-color;
+
+@selection-color: @blue-color;
+@text-selection-color: @text-color;
+@control-selection-color: @selection-color;
+@alt-control-selection-color: @selection-color;
+
+@light-icon-color: @white-color;
+@info-icon-color: @blue-color;
+@icon-color: @light-gray-color;
+@dark-icon-color: @gray-color;
+
+@light-text-color: @white-color;
+@info-text-color: @gray-color;
+@text-color: @darker-gray-color;
+@shadow-color: @gray-color;
+
+@background-color: @dark-gray-color;
+@desktop-color: @darker-blue-color;
+
+@warning-color: @yellow-color;
+@error-color: @light-red-color;
+@success-color: @light-green-color;
+
 @media (max-width: 768px) {
 
   .column .padding {
