Before removing Visual Programming 2

--- a/app/modules/editor/partials/includes/node-state-template.jade
+++ b/app/modules/editor/partials/includes/node-state-template.jade
@@ -1,3 +1,1 @@
-td.node-error-col(id="node-error-col_{{n.id()}}")
-
-  span.node-error-icon(id="node-error-icon_{{n.id()}}", ng-class="{ 'cic-': n.hasErrors() }")
+span.node-state-icon(id="node-state-icon_{{n.id()}}", ng-class="{ 'cic cic-new': n.hasErrors() }")
