--- a/app/modules/editor/styles/editor.less
+++ b/app/modules/editor/styles/editor.less
@@ -9,3 +9,35 @@
 #editor-main {
 //  background-color: rgba(200, 200, 50, 0.25);
 }
+
+[ng-drag] {
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: none;
+}
+
+[ng-drag].drag-over {
+
+}
+
+[ng-drag].dragging {
+  opacity: 0.75;
+  margin-left: 0px;
+  z-index: 2000;
+  -webkit-transform: rotate(2.5deg);
+  -moz-transform: rotate(2.5deg);
+  -o-transform: rotate(2.5deg);
+  -ms-transform: rotate(2.5deg);
+  transform: rotate(2.5deg);
+}
+
+[ng-drop] {
+
+}
+
+[ng-drop].drag-enter table.node {
+  background-color: orangered;
+}
