Before replace my custom dynamicForm with angular-schema-form

--- a/app/dynFormTemplates/row_form.jade
+++ b/app/dynFormTemplates/row_form.jade
@@ -3,3 +3,6 @@
 .row-fluid(ng-controller="dynFormObjectCtrl", ng-init="fi = {%fieldIndex%}; fn = '{%fieldName%}';", ng-show="fields[{%fieldIndex%}].type === 'tabs' || fields[{%fieldIndex%}].tab == form.activeTab")
   .form-group
     // <fields>
+.row-fluid(ng-controller="dynFormObjectCtrl", ng-init="fi = {%fieldIndex%}; fn = '{%fieldName%}';", ng-show="fields[{%fieldIndex%}].type === 'tabs' || fields[{%fieldIndex%}].tab == form.activeTab")
+  .form-group
+    // <fields>
